# leetcode

./: .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  Makefile  README.md  SPONSOR.md  mkdocs.yml  zensical.toml
.github/: FUNDING.yml  dependabot.yml
.github/docs-assets/: extra.css  giscus.js  lazy-images.js  mathjax.js  performance.css  width-toggle.js
.github/docs-assets/javascripts/: giscus.js  mathjax.js  width-toggle.js
.github/docs-assets/stylesheets/: extra.css
.github/scripts/: update_leetcode_cache.py
.github/workflows/: ci.yml  docs.yml  leetbot.yml  leetcode-cache.yml
core/: README.md  index.md
core/algorithms/backtracking/: README.md  README.zh-CN.md
core/algorithms/dp/: README.md  README.zh-CN.md
core/algorithms/dynamic_programming/: README.md
core/algorithms/greedy/: README.md
core/algorithms/recursion/: README.md
core/algorithms/sorting/: README.md
core/algorithms/traversal/: README.md
core/checklist/: README.md
core/checklist/go/: README.md
core/checklist/python/: README.md
core/data_structures/: README.md
core/data_structures/array/: README.md
core/data_structures/graph/: README.md
core/data_structures/hash_table/: README.md
core/data_structures/heap/: README.md
core/data_structures/linked_list/: README.md
core/data_structures/queue/: README.md
core/data_structures/stack/: README.md
core/data_structures/tree/: README.md
core/lang/: README.md  go.md
core/math/: README.md
core/patterns/: README.md
diagrams/: 0024_swap_nodes_in_pairs.drawio  0043_multiply_strings.drawio  0739_daily_temperatures.drawio
docs/: index.md
docs/algorithms/: README.md
docs/checklist/: README.md
docs/data_structures/: README.md
docs/javascripts/: glightbox.js
docs/lang/: README.md
docs/math/: README.md
docs/patterns/: README.md
docs/stylesheets/: extra.css
githooks/: README.md  pre-commit  pre-push
go/: .golangci.yml  README.md  go.mod
go/0001.twoSum/: two_sum.go  two_sum_test.go
go/0001_two_sum/: two_sum.go  two_sum_test.go
go/0020.isValid/: valid_parentheses_test.go
go/0020_valid_parentheses/: valid_parentheses.go  valid_parentheses_test.go
go/0136.singleNumber/: single_number.go  single_number_test.go
go/0136_single_number/: single_number.go  single_number_test.go
go/0217.containsDuplicate/: 217. contains_duplicate_test.go  contains_duplicate_test.go
go/0217_contains_duplicate/: contains_duplicate_test.go
go/1.twoSum/: two_sum_test.go
go/136.singleNumber/: 136. single_number_test.go
go/20.isValid/: 20. valid_parentheses.go  20. valid_parentheses_test.go
go/2073.timeRequiredToBuy/: time_needed_to_buy_tickets.go
go/2073_time_needed_to_buy_tickets/: time_needed_to_buy_tickets.go  time_needed_to_buy_tickets_test.go
go/leetcode/: 1. two_sum.go  1. two_sum_test.go  136. single_number.go  136. single_number_test.go  20. valid_parentheses.go  20. valid_parentheses_test.go  217. contains_duplicate.go  217. contains_duplicate_test.go
go/linked_list/: doubly_test.go  list.go  list_test.go  singly.go  singly_test.go
go/sorting/: sorting.go  sorting_test.go
go/tree/: traversal.go  traversal_test.go  tree.go
python/: pyproject.toml
python/0001_two_sum/: test_two_sum.py  two_sum.py
python/0020_valid_parentheses/: test_valid_parentheses.py  valid_parentheses.py
python/common/: list_node.py  tree_node.py
python/solutions/0001_two_sum/: test_two_sum.py  two_sum.py
python/solutions/0011_container_with_most_water/: container_with_most_water.py  test_container_with_most_water.py
python/solutions/0020_valid_parentheses/: test_valid_parentheses.py  valid_parentheses.py
python/solutions/0049_group_anagrams/: group_anagrams.py  solution.py  test_group_anagrams.py  test_solution.py
python/solutions/0092_reverse_linked_list_ii/: reverse_linked_list_ii.py  test_reverse_linked_list_ii.py
python/solutions/0128_longest_consecutive_sequence/: longest_consecutive_sequence.py  test_longest_consecutive_sequence.py
python/solutions/0206_reverse_linked_list/: reverse_linked_list.py  test_reverse_linked_list.py
python/solutions/0560_subarray_sum_equals_k/: solution.py  subarray_sum_equals_k.py  test_solution.py  test_subarray_sum_equals_k.py
scripts/: convert-images-to-webp.py  create_solution.py  img2webp.py
(+303 files in other folders)
