[project]
name = "leetcode"
version = "0.1.0"
description = "LeetCode solutions in Python"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Palemoky", email = "palemoky@gmail.com" }
]
keywords = ["leetcode", "algorithms", "data-structures", "interview-prep"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.14.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ruff configuration - Fast Python linter and formatter
[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bugs and design problems)
    "C4",  # flake8-comprehensions (better list/dict/set comprehensions)
    "UP",  # pyupgrade (modern Python syntax)
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

# MyPy configuration - Static type checker for Python
[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

# Pytest configuration - Testing framework
[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "-ra",                                      # Show summary of all test outcomes
    "-v",                                       # Verbose mode for better test output
    "--strict-markers",                         # Enforce marker registration
    "--strict-config",                          # Enforce strict configuration
    "--cov=.",                                  # Measure code coverage for all solution files
    "--cov-report=term-missing:skip-covered",   # Show missing lines in terminal
    "--cov-report=html",                        # Generate HTML coverage report
]
testpaths = ["."]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Commitizen configuration - Semantic versioning and changelog automation
[tool.commitizen]
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

scopes = [
    "solution",  # New LeetCode solution
    "test",      # Test improvements
    "ci",        # CI/CD changes
    "deps",      # Dependency updates
    "docs",      # Documentation
]

bump_message = "chore(release): bump version $current_version -> $new_version"
annotated_tag = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true

[tool.commitizen.customize]
changelog_pattern = "^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)(\\(.*\\))?:!?"