# LeetCode Python Solutions
# 这不是一个可分发的包，只是用于记录 LeetCode 题解

[project]
name = "leetcode"
version = "0.1.0"
description = "LeetCode solutions in Python"
requires-python = ">=3.14"

dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]

# MyPy configuration
[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "9.0"
addopts = ["-ra", "-v", "--strict-markers", "--strict-config"]
testpaths = ["."]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
